# perangkat-lunak-matematika

./: pyproject.toml  requirements.txt
Pertemuan/pertemuan-2/: latihan.ipynb  main.ipynb
Pertemuan/pertemuan-3/: main.ipynb
Pertemuan/pertemuan-4/: main.ipynb
Tugas/tugas-1/: Tugas 1.html
Tugas/tugas-2/: Tugas 2.html  Tugas 2.ipynb
Tugas/tugas-3/: Tugas_3_PLM_Kelompok_4.html  Tugas_3_PLM_Kelompok_4.ipynb  data-plm.csv  main.py  pre-processing.py
Tugas/tugas-4/: Tugas 3.html  Tugas 3.ipynb  main.py
tugas-1/: Tugas 1.ipynb
